--- a/web/graph.html
+++ b/web/graph.html
@@ -11,6 +11,8 @@
   <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
       rel="stylesheet">
+  <!-- include lodash -->
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
   <!-- include jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.11.3.min.js" defer><\/script>')</script>
@@ -83,14 +85,6 @@
                     <input type="search" placeholder="Search...">
                   </div>
                   <ul class="list">
-                    <li><a href="#">Albania</a></li>
-                    <li><a href="#">Austria</a></li>
-                    <li><a href="#">Bosnia and Herzegovina</a></li>
-                    <li><a href="#">Belgium</a></li>
-                    <li><a href="#">Bulgaria</a></li>
-                    <li><a href="#">Switzerland</a></li>
-                    <li><a href="#">Cyprus</a></li>
-                    <li><a href="#">Czech Republic</a></li>
                   </ul>
                   <div class="btn-holder">
                     <a href="#" class="cancel btn-primary">Cancel</a>
@@ -100,24 +94,13 @@
               </div>
             </li>
             <li>
-              <select>
+              <select class="js-filter" data-filter-type="discipline">
                 <option class="hide">Select a Discipline</option>
-                <option>Earth Sciences &amp; Environment</option>
-                <option>Engineering &amp; Technology</option>
-                <option>Humanities</option>
-                <option>Information &amp; Communication Technologies</option>
-                <option>Life Sciences &amp; Biotech</option>
-                <option>Material Sciences</option>
-                <option>Physics</option>
-                <option>Social Sciences</option>
               </select>
             </li>
             <li>
-              <select>
+              <select class="js-filter" data-filter-type="founding-round">
                 <option class="hide">Select a Founding Round</option>
-                <option>Round 1</option>
-                <option>Round 2</option>
-                <option>Round 3</option>
               </select>
             </li>
           </ul>
