--- a/web/graph.html
+++ b/web/graph.html
@@ -24,6 +24,7 @@
   <!-- include custom JavaScript -->
   <script src="js/filters-data.js" defer></script>
   <script src="js/jquery.main.js" defer></script>
+  <script src="js/lib.js" defer></script>
 </head>
 <body>
 <!-- main container of all the page elements -->
