--- a/web/graph2.html
+++ b/web/graph2.html
@@ -23,6 +23,7 @@
   <script src="https://d3js.org/d3.v3.min.js" defer></script>
   <!-- include custom JavaScript -->
   <script src="js/jquery.main.js" defer></script>
+  <script src="js/lib.js" defer></script>
 </head>
 <body>
 <!-- main container of all the page elements -->
