--- a/web/graph2.html
+++ b/web/graph2.html
@@ -86,14 +86,7 @@
                     <input type="search" placeholder="Search...">
                   </div>
                   <ul class="list">
-                    <li><a href="#">Albania</a></li>
-                    <li><a href="#">Austria</a></li>
-                    <li><a href="#">Bosnia and Herzegovina</a></li>
-                    <li><a href="#">Belgium</a></li>
-                    <li><a href="#">Bulgaria</a></li>
-                    <li><a href="#">Switzerland</a></li>
-                    <li><a href="#">Cyprus</a></li>
-                    <li><a href="#">Czech Republic</a></li>
+                    <li data-filter-type="country" data-value=""><a>Select a Country</a></li>
                   </ul>
                   <div class="btn-holder">
                     <a href="#" class="cancel btn-primary">Cancel</a>
@@ -104,23 +97,12 @@
             </li>
             <li>
               <select>
-                <option class="hide">Select a Discipline</option>
-                <option>Earth Sciences &amp; Environment</option>
-                <option>Engineering &amp; Technology</option>
-                <option>Humanities</option>
-                <option>Information &amp; Communication Technologies</option>
-                <option>Life Sciences &amp; Biotech</option>
-                <option>Material Sciences</option>
-                <option>Physics</option>
-                <option>Social Sciences</option>
+                <option value="">Select a Discipline</option>
               </select>
             </li>
             <li>
               <select>
-                <option class="hide">Select a Founding Round</option>
-                <option>Round 1</option>
-                <option>Round 2</option>
-                <option>Round 3</option>
+                <option value="">Select a Founding Round</option>
               </select>
             </li>
           </ul>
