--- a/web/graph.html
+++ b/web/graph.html
@@ -84,15 +84,11 @@
                 <a href="#" class="opener"><span data-filter-value="country">Select a Country</span></a>
                 <div class="drop">
                   <div class="input">
-                    <input type="search" placeholder="Search...">
+                    <input class="js-country-search" type="search" placeholder="Search...">
                   </div>
                   <ul class="list js-filter" data-filter-type="country">
                     <li data-filter-type="country" data-value=""><a>Select a Country</a></li>
                   </ul>
-                  <div class="btn-holder">
-                    <a href="#" class="cancel btn-primary">Cancel</a>
-                    <a href="#" class="apply btn-default">Apply</a>
-                  </div>
                 </div>
               </div>
             </li>
