fix: funding round instead of founding round

--- a/web/graph.html
+++ b/web/graph.html
@@ -98,7 +98,7 @@
               </select>
             </li>
             <li>
-              <select class="js-filter" data-filter-type="founding_round">
+              <select class="js-filter" data-filter-type="funding_round">
                 <option value="">Select a Founding Round</option>
               </select>
             </li>
