feat: connects gender pie chart to API

--- a/web/graph.html
+++ b/web/graph.html
@@ -23,6 +23,7 @@
   <script src="https://d3js.org/d3.v3.min.js" defer></script>
   <!-- include custom JavaScript -->
   <script src="js/filters-data.js" defer></script>
+  <script src="js/sql-queries.js" defer></script>
   <script src="js/jquery.main.js" defer></script>
   <script src="js/lib.js" defer></script>
 </head>
@@ -117,7 +118,7 @@
           <div class="col-holder">
             <div class="chart-heading">
               <h2 class="chart-title">Researchers by Gender</h2>
-              <h3 class="chart-sub-title">France</h3>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
             </div>
             <div class="pie-chart"></div>
           </div>
@@ -126,7 +127,7 @@
           <div class="col-holder">
             <div class="chart-heading">
               <h2 class="chart-title">Researchers by Time</h2>
-              <h3 class="chart-sub-title">France</h3>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
             </div>
             <div class="line-chart"></div>
           </div>
@@ -135,7 +136,7 @@
           <div class="col-holder">
             <div class="chart-heading">
               <h2 class="chart-title">Researchers by County</h2>
-              <h3 class="chart-sub-title">France</h3>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
               <div class="chart-info">
                 <span class="square" style="background: #a0b4f7;"></span>
                 <span>earth sciences &amp; environment</span>
@@ -149,7 +150,7 @@
           <div class="col-holder">
             <div class="chart-heading">
               <h2 class="chart-title">Researchers by Discipline</h2>
-              <h3 class="chart-sub-title">France</h3>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
               <div class="chart-info">
                 <span class="square" style="background: #5d77cd;"></span>
                 <span>earth sciences &amp; environment</span>
@@ -165,7 +166,7 @@
           <div class="col-holder">
             <div class="chart-heading">
               <h2 class="chart-title">Papes per Year</h2>
-              <h3 class="chart-sub-title">France</h3>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
             </div>
             <div class="column-chart"></div>
           </div>
@@ -174,7 +175,7 @@
           <div class="col-holder">
             <div class="chart-heading">
               <h2 class="chart-title">What Collections did the Researchers Access?</h2>
-              <h3 class="chart-sub-title">France</h3>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
               <div class="chart-info">
                 <span class="square" style="background: #435caf;"></span>
                 <span>BELGIUM</span>
@@ -188,7 +189,7 @@
           <div class="col-holder">
             <div class="chart-heading">
               <h2 class="chart-title">Researcher Movement by Region</h2>
-              <h3 class="chart-sub-title">France</h3>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
             </div>
             <div class="tree-chart"></div>
           </div>
