--- a/web/graph.html
+++ b/web/graph.html
@@ -120,7 +120,7 @@
               <h2 class="chart-title">Researchers by Gender</h2>
               <h3 class="chart-sub-title js-country-filter-dependent"></h3>
             </div>
-            <div class="pie-chart"></div>
+            <div class="gender-donut-chart"></div>
           </div>
         </div>
         <div class="col">
@@ -165,10 +165,19 @@
         <div class="col">
           <div class="col-holder">
             <div class="chart-heading">
-              <h2 class="chart-title">Papes per Year</h2>
+              <h2 class="chart-title">Papers per Year</h2>
               <h3 class="chart-sub-title js-country-filter-dependent"></h3>
             </div>
             <div class="column-chart"></div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-holder">
+            <div class="chart-heading">
+              <h2 class="chart-title"></h2>
+              <h3 class="chart-sub-title js-country-filter-dependent"></h3>
+            </div>
+            <div class="researcher-type-donut-chart"></div>
           </div>
         </div>
         <div class="col">
