fix: sankey parsing and donut labels

--- a/web/graph.html
+++ b/web/graph.html
@@ -174,7 +174,7 @@
         <div class="col">
           <div class="col-holder">
             <div class="chart-heading">
-              <h2 class="chart-title"></h2>
+              <h2 class="chart-title">Researcher Type</h2>
               <h3 class="chart-sub-title js-country-filter-dependent"></h3>
             </div>
             <div class="researcher-type-donut-chart"></div>
