--- a/web/graph.html
+++ b/web/graph.html
@@ -110,8 +110,7 @@
     <!-- filter info -->
     <div class="filter-info container">
       <div class="text">
-        <p>France had <strong>500</strong> vistors, from <strong>87</strong> institutes, and was
-          granted a total of <strong>6,315</strong> research days.</p>
+        <p class="js-dynamic-sentence"></p>
       </div>
       <div class="charts-block">
         <div class="col">
