--- a/web/about.html
+++ b/web/about.html
@@ -21,7 +21,7 @@
   <script src="https://code.highcharts.com/maps/modules/map.js" defer></script>
   <script src="https://d3js.org/d3.v3.min.js" defer></script>
   <!-- include custom JavaScript -->
-  <script src="js/jquery.main.js" defer></script>
+  <script src="js/main.js" defer></script>
   <script src="js/lib.js" defer></script>
 </head>
 <body>
