--- a/web/graph2.html
+++ b/web/graph2.html
@@ -24,7 +24,7 @@
   <!-- include custom JavaScript -->
   <script src="js/constants.js" defer></script>
   <script src="js/sql-queries.js" defer></script>
-  <script src="js/jquery.main.js" defer></script>
+  <script src="js/main.js" defer></script>
   <script src="js/lib.js" defer></script>
 </head>
 <body>
