fix: remos/replaces hardcoded texts

--- a/graph.html
+++ b/graph.html
@@ -137,9 +137,7 @@
               <h2 class="chart-title">Researchers by County</h2>
               <h3 class="chart-sub-title js-country-filter-dependent"></h3>
               <div class="chart-info">
-                <span class="square" style="background: #a0b4f7;"></span>
-                <span>earth sciences &amp; environment</span>
-                <b> 5.000 Projects</b>
+                <span class="js-discipline-filter-dependent"></span>
               </div>
             </div>
             <div class="map-chart" data-geo-src="inc/fr-all-all.geo.json"></div>
@@ -150,11 +148,6 @@
             <div class="chart-heading">
               <h2 class="chart-title">Researchers by Discipline</h2>
               <h3 class="chart-sub-title js-country-filter-dependent"></h3>
-              <div class="chart-info">
-                <span class="square" style="background: #5d77cd;"></span>
-                <span>earth sciences &amp; environment</span>
-                <b> 5.000 Projects</b>
-              </div>
             </div>
             <div class="bubbles-chart-holder">
               <div class="bubbles-chart" data-src="inc/bubbles-chart-data.json"></div>
