fix: updates table columns width

--- a/graph.html
+++ b/graph.html
@@ -229,8 +229,8 @@
                       <i class="icon-arrow-combo"></i>
                     </button>
                   </th>
-                  <th class="col5"><span>Volume</span></th>
-                  <th class="col6"><span>Pages</span></th>
+                  <th class="col5"><span>Vol.</span></th>
+                  <th class="col6"><span>PP.</span></th>
                 </tr>
                 </thead>
                 <tbody class="js-table-body"></tbody>
