feat: includes table pagination

--- a/graph.html
+++ b/graph.html
@@ -239,16 +239,7 @@
             <!-- paging area -->
             <div class="paging-area">
               <a href="#" class="prev btn-default">Prev</a>
-              <ul class="paging">
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">6</a></li>
-                <li><span>...</span></li>
-                <li><a href="#">34</a></li>
-              </ul>
+              <ul class="paging js-table-pagination"></ul>
               <a href="#" class="next btn-default">Next</a>
             </div>
           </div>
