feat: removes lang selector

--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
   <script src="https://code.highcharts.com/maps/modules/map.js" defer></script>
   <script src="https://d3js.org/d3.v3.min.js" defer></script>
   <!-- include custom JavaScript -->
+  <script src="js/constants.js" defer></script>
+  <script src="js/sql-queries.js" defer></script>
   <script src="js/main.js" defer></script>
   <script src="js/lib.js" defer></script>
 </head>
@@ -54,16 +56,6 @@
               </li>
             </ul>
           </nav>
-          <div class="language-holder">
-            <div class="language">
-              <a href="#" class="opener"><span>Language</span></a>
-              <ul class="dropdown">
-                <li><a href="#">ENG</a></li>
-                <li><a href="#">FRA</a></li>
-                <li><a href="#">SPANISH</a></li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
     </div>
