fix: hides pagination buttons

--- a/graph.html
+++ b/graph.html
@@ -228,9 +228,9 @@
             </div>
             <!-- paging area -->
             <div class="paging-area">
-              <a href="#" class="prev btn-default">Prev</a>
+              <a href="#" class="js-pagination-prev prev btn-default is-hidden">Prev</a>
               <ul class="paging js-table-pagination"></ul>
-              <a href="#" class="next btn-default">Next</a>
+              <a href="#" class="js-pagination-next next btn-default is-hidden">Next</a>
             </div>
           </div>
         </div>
