feat: include pagination buttons

--- a/graph.html
+++ b/graph.html
@@ -25,6 +25,7 @@
   <script src="js/constants.js" defer></script>
   <script src="js/sql-queries.js" defer></script>
   <script src="js/app.js" defer></script>
+  <script src="js/main.js" defer></script>
   <script src="js/lib.js" defer></script>
 </head>
 <body>
@@ -228,9 +229,9 @@
             </div>
             <!-- paging area -->
             <div class="paging-area">
-              <a href="#" class="js-pagination-prev prev btn-default is-hidden">Prev</a>
+              <a href="#" class="js-pagination-prev prev btn-default">Prev</a>
               <ul class="paging js-table-pagination"></ul>
-              <a href="#" class="js-pagination-next next btn-default is-hidden">Next</a>
+              <a href="#" class="js-pagination-next next btn-default">Next</a>
             </div>
           </div>
         </div>
