fix: enable unique filtering

--- a/graph.html
+++ b/graph.html
@@ -73,13 +73,13 @@
             <li><a href="#" class="all js-filter-restore"><span>All</span></a></li>
             <li>
               <div class="autocomplete">
-                <a href="#" class="opener"><span data-filter-value="country">Select a Country</span></a>
+                <a href="#" class="opener"><span class="js-country-filter-label">Select a Country</span></a>
                 <div class="drop">
                   <div class="input">
                     <input class="js-country-search" type="search" placeholder="Search...">
                   </div>
                   <ul class="list js-filter" data-filter-type="country">
-                    <li data-filter-type="country" data-value=""><a>Select a Country</a></li>
+                    <li id="data-filter-placeholder" data-filter-type="country" data-value=""><a>Select a Country</a></li>
                   </ul>
                 </div>
               </div>
