feat: changes showcases structure & prepares 4 images

--- a/showcases/magnified-crowdsourcing-projects.html
+++ b/showcases/magnified-crowdsourcing-projects.html
@@ -61,79 +61,82 @@
     </nav>
     <div class="container">
       <!-- project block -->
-      <div class="project-block">
-        <div class="btn-holder">
-          <a target="_blank" rel="noopener noreferrer" href="http://www.nhm.ac.uk/take-part/citizen-science/miniature-lives-magnified.html" class="more">Go to Project Site</a>
+      <div class="container">
+        <div class="intro-text">
+          <h1>‘Magnified’ Crowdsourcing Projects</h1>
+          <div class="text">
+            <p>Harnessing the power of the crowd to capture label data from mass-digitised specimens.</p>
+            <div class="btn-holder">
+              <a target="_blank" rel="noopener noreferrer" href="http://www.nhm.ac.uk/take-part/citizen-science/miniature-lives-magnified.html" class="more">Go to Project Site</a>
+            </div>
+          </div>
         </div>
-        <h1>‘Magnified’ Crowdsourcing Projects</h1>
-        <div class="project-info">
-          <div class="project-caption">
-            <div class="img-holder">
-                <img src="../images/img02-large.jpg" alt="image description">
-            </div>
-            <div class="description">
-              <h2>At a glance</h2>
-              <p>Harnessing the power of the crowd to capture label data from mass-digitised specimens.</p>
-              <dl>
-                <dt></dt>
-                <dd></dd>
-                <dt></dt>
-                <dd></dd>
-              </dl>
-            </div>
+
+        <div class="about-detail">
+          <h2>About the Project</h2>
+          <p>A specimen image only tells a small part of the story. Vital contextual information
+            is stored on labels, and turning these into useful digital data presents a
+            challenge. Despite improvements in handwriting recognition software, label data can
+            be difficult to capture automatically with accuracy. Crowdsourcing – using citizen
+            scientists and volunteers to perform tasks which collect data and integrate into
+            research workflows – is a potentially very effective way of addressing this problem.
+            SYNTHESYS3 partnered with <a target="_blank" rel="noopener noreferrer"
+                                         href="https://www.notesfromnature.org/">Notes from
+              Nature</a> , part of the <a class="https://www.zooniverse.org/">Zooniverse</a>
+            crowdsourcing platform, to launch crowdsourcing projects centered around the capture
+            of handwritten label data for digitized museum collections. The first two projects
+            were as follows:</p>
+          <h3>Miniature Lives Magnified</h3>
+          <p>The pilot project, launched in August 2016, concerned a collection of chalcids – a
+            group of parasitoid wasps – from the Natural History Museum, London. Chalcids are of
+            high scientific importance due to their role as a biological control agent which can
+            protect crops and reduce invasive species. Around 100,000 microscope slides
+            containing chalcids were imaged and their labels transcribed by 1,000+ ‘digital
+            volunteers’ over a 10 month period.</p>
+          <h3>Miniature Fossils Magnified</h3>
+          <p>The second Magnified project focused on digitized slides containing foraminifera -
+            ocean sediment-dwelling organisms – from shallow tropical seas. These tiny specimens
+            are hugely important in learning how the environment, climate and ocean have changed
+            over the past 500 million years. So far 2,071 slides have been transcribed with a
+            third and final batch being released in Autumn 2017.</p>
+        </div>
+      </div>
+
+      <div class="promo">
+        <div class="img-holder">
+          <div class="img-frame">
+            <picture>
+              <source srcset="../images/img01-small.jpg, ../images/img01-small@2x.jpg 2x"
+                      media="(max-width: 767px)">
+              <source srcset="../images/img01-large.jpg, ../images/img01-large@2x.jpg 2x">
+              <img src="../images/img01-large.jpg" alt="image description">
+            </picture>
           </div>
-          <div class="detail">
-            <div class="widget">
-              <h2>About the Project</h2>
-              <p>A specimen image only tells a small part of the story. Vital contextual information
-                is stored on labels, and turning these into useful digital data presents a
-                challenge. Despite improvements in handwriting recognition software, label data can
-                be difficult to capture automatically with accuracy. Crowdsourcing – using citizen
-                scientists and volunteers to perform tasks which collect data and integrate into
-                research workflows – is a potentially very effective way of addressing this problem.
-                SYNTHESYS3 partnered with <a target="_blank" rel="noopener noreferrer"
-                                             href="https://www.notesfromnature.org/">Notes from
-                  Nature</a> , part of the <a class="https://www.zooniverse.org/">Zooniverse</a>
-                crowdsourcing platform, to launch crowdsourcing projects centered around the capture
-                of handwritten label data for digitized museum collections. The first two projects
-                were as follows:</p>
-              <h3>Miniature Lives Magnified</h3>
-              <p>The pilot project, launched in August 2016, concerned a collection of chalcids – a
-                group of parasitoid wasps – from the Natural History Museum, London. Chalcids are of
-                high scientific importance due to their role as a biological control agent which can
-                protect crops and reduce invasive species. Around 100,000 microscope slides
-                containing chalcids were imaged and their labels transcribed by 1,000+ ‘digital
-                volunteers’ over a 10 month period.</p>
-              <h3>Miniature Fossils Magnified</h3>
-              <p>The second Magnified project focused on digitized slides containing foraminifera -
-                ocean sediment-dwelling organisms – from shallow tropical seas. These tiny specimens
-                are hugely important in learning how the environment, climate and ocean have changed
-                over the past 500 million years. So far 2,071 slides have been transcribed with a
-                third and final batch being released in Autumn 2017.</p>
-            </div>
-            <div class="widget">
-              <h2>Taking Part</h2>
-              <p>The latest iterations of Miniature Lives Magnified and Miniature Fossils Magnified
-                have been completed and are now closed. A further batch of foraminifera slides from
-                Miniature Fossils Magnified are due for release in September 2017. Further projects
-                are also planned in the future using collections from the Natural History Museum,
-                London and other SYNTHESYS partners. Please continue to check the <a
-                  href="https://www.notesfromnature.org/active-expeditions/Magnified">Magnified</a>
-                page for future participation opportunities.
-              </p>
-              <p>
-                For further information on both projects:
-                <ul>
-                <li><a target="_blank" rel="noopener noreferrer"
-                       href="http://www.nhm.ac.uk/take-part/citizen-science/miniature-lives-magnified.html">Miniature
-                    Lives Magnified</a></li>
-                <li><a target="_blank" rel="noopener noreferrer"
-                       href="http://www.nhm.ac.uk/take-part/citizen-science/miniature-fossils-magnified.html">Miniature
-                    Fossils Magnified</a></li>
-                </ul>
-              </p>
-            </div>
-          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="about-detail">
+          <h2>Taking Part</h2>
+          <p>The latest iterations of Miniature Lives Magnified and Miniature Fossils Magnified
+            have been completed and are now closed. A further batch of foraminifera slides from
+            Miniature Fossils Magnified are due for release in September 2017. Further projects
+            are also planned in the future using collections from the Natural History Museum,
+            London and other SYNTHESYS partners. Please continue to check the <a
+              href="https://www.notesfromnature.org/active-expeditions/Magnified">Magnified</a>
+            page for future participation opportunities.
+          </p>
+          <p>
+            For further information on both projects:
+          <ul>
+            <li><a target="_blank" rel="noopener noreferrer"
+                   href="http://www.nhm.ac.uk/take-part/citizen-science/miniature-lives-magnified.html">Miniature
+              Lives Magnified</a></li>
+            <li><a target="_blank" rel="noopener noreferrer"
+                   href="http://www.nhm.ac.uk/take-part/citizen-science/miniature-fossils-magnified.html">Miniature
+              Fossils Magnified</a></li>
+          </ul>
+          </p>
         </div>
       </div>
     </div>
