--- a/showcases/collections-self-assesment-tool.html
+++ b/showcases/collections-self-assesment-tool.html
@@ -71,74 +71,74 @@
     </nav>
     <div class="container">
       <!-- project block -->
-      <div class="project-block">
-        <div class="btn-holder">
-          <a target="_blank" rel="noopener noreferrer" href="http://www.synthesys.info/network-activities/synthesys3-na2/self-assessment/" class="more">Go to Project Site</a>
-        </div>
-        <h1>Collections Self-Assessment Tool</h1>
-        <div class="project-info">
-          <div class="project-caption">
-            <div class="img-holder">
-              <img src="../images/img02-large.jpg" alt="image description">
-            </div>
-            <div class="description">
-              <h2>At a glance</h2>
-              <p>Creating a unified and accessible assessment methodology for care of Natural History collections.</p>
-              <dl>
-                <dt></dt>
-                <dd></dd>
-                <dt></dt>
-                <dd></dd>
-              </dl>
+      <div class="container">
+        <div class="intro-text">
+          <h1>Collections Self-Assessment Tool</h1>
+          <div class="text">
+            <p>Creating a unified and accessible assessment methodology for care of Natural History collections.</p>
+            <div class="btn-holder">
+              <a target="_blank" rel="noopener noreferrer" href="http://www.synthesys.info/network-activities/synthesys3-na2/self-assessment/" class="more">Go to Project Site</a>
             </div>
           </div>
-          <div class="detail">
-            <div class="widget">
-              <p></p>
+        </div>
+
+        <div class="about-detail">
+          <h2>About the Project</h2>
+          <p>
+            The Collections Self-Assessment tool (CSAT) is a free online tool, developed during
+            SYNTHESYS2 (2008 – 2013), as a means of allowing institutions to assess aspects of
+            their collections care and management with an objective and unified set of
+            criteria.
+          </p>
+        </div>
+
+        <div class="promo">
+          <div class="img-holder">
+            <div class="img-frame">
+              <picture>
+                <source srcset="../images/img01-small.jpg, ../images/img01-small@2x.jpg 2x"
+                        media="(max-width: 767px)">
+                <source srcset="../images/img01-large.jpg, ../images/img01-large@2x.jpg 2x">
+                <img src="../images/img01-large.jpg" alt="image description">
+              </picture>
             </div>
-            <div class="widget">
-              <h2>About the Project</h2>
-              <p>
-                The Collections Self-Assessment tool (CSAT) is a free online tool, developed during
-                SYNTHESYS2 (2008 – 2013), as a means of allowing institutions to assess aspects of
-                their collections care and management with an objective and unified set of
-                criteria.
-              </p>
-            </div>
-            <div class="widget">
-              <h2>How it works</h2>
-              <p>
-                Each institution that signs up to the CSAT can register as many departments as
-                required, each of which is assessed separately under each of the following
-                categories:
-                <ul>
-                  <li>Collections Management</li>
-                  <li>Collections Care</li>
-                  <li>Collections Access</li>
-                  <li>Molecular Collections</li>
-                  <li>Digital Collections</li>
-                </ul>
-              </p>
-              <p>The infrastructure and buildings standards of the institution as a whole are also assessed.</p>
-              <p>There is currently a total of 89 distinct criteria across the 7 categories in the
-                CSAT. The assessor will decide whether the institution has Not Met, Partially Met,
-                Mainly Met, Met, or Exceeded each criteria, with a space to add clarifying comments.
-                The resulting report uses a Red-Amber-Green traffic light system to demonstrate the
-                urgency with which any unmet criteria should be addressed, along with advice on how
-                best to approach doing so.</p>
-              <p>Self-assessments can be re-taken as many times as required by the institution to measure progress.</p>
-              <p>So far, 26 institutions have filled out the CSAT with 31 further institutions
-                registered on the site or with assessments in progress. A 2015 update resulted in
-                the inclusion of Digital and Molecular collections as part of the initiative to
-                develop unified management policies for new physical and virtual collections.</p>
-              <p>To sign your institution up to the CSAT, please visit
-                <a target="_blank"
-                   rel="noopener noreferrer"
-                   href="http://www.synthesys.info/network-activities/synthesys3-na2/self-assessment/">Synthesys</a>
-                and follow the link to log in or register your institution.
-              </p>
-              <p>If you have any questions about the CSAT, please email <a id="js-base64-email"></a></p>
-            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="about-detail">
+            <h2>How it works</h2>
+            <p>
+              Each institution that signs up to the CSAT can register as many departments as
+              required, each of which is assessed separately under each of the following
+              categories:
+            <ul>
+              <li>Collections Management</li>
+              <li>Collections Care</li>
+              <li>Collections Access</li>
+              <li>Molecular Collections</li>
+              <li>Digital Collections</li>
+            </ul>
+            </p>
+            <p>The infrastructure and buildings standards of the institution as a whole are also assessed.</p>
+            <p>There is currently a total of 89 distinct criteria across the 7 categories in the
+              CSAT. The assessor will decide whether the institution has Not Met, Partially Met,
+              Mainly Met, Met, or Exceeded each criteria, with a space to add clarifying comments.
+              The resulting report uses a Red-Amber-Green traffic light system to demonstrate the
+              urgency with which any unmet criteria should be addressed, along with advice on how
+              best to approach doing so.</p>
+            <p>Self-assessments can be re-taken as many times as required by the institution to measure progress.</p>
+            <p>So far, 26 institutions have filled out the CSAT with 31 further institutions
+              registered on the site or with assessments in progress. A 2015 update resulted in
+              the inclusion of Digital and Molecular collections as part of the initiative to
+              develop unified management policies for new physical and virtual collections.</p>
+            <p>To sign your institution up to the CSAT, please visit
+              <a target="_blank"
+                 rel="noopener noreferrer"
+                 href="http://www.synthesys.info/network-activities/synthesys3-na2/self-assessment/">Synthesys</a>
+              and follow the link to log in or register your institution.
+            </p>
+            <p>If you have any questions about the CSAT, please email <a id="js-base64-email"></a></p>
           </div>
         </div>
       </div>
